--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -428,6 +428,12 @@
     <ClCompile Include="UVa\600\674.cpp">
       <Filter>UVa\600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10684.cpp">
+      <Filter>UVa\10600</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\11900\11942.cpp">
+      <Filter>UVa\11900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
