--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -434,6 +434,9 @@
     <ClCompile Include="UVa\11900\11942.cpp">
       <Filter>UVa\11900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12400\12403.cpp">
+      <Filter>UVa\12400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
