--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -440,6 +440,9 @@
     <ClCompile Include="UVa\10000\10050.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10945.cpp">
+      <Filter>UVa\10900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
