--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -443,6 +443,9 @@
     <ClCompile Include="UVa\10900\10945.cpp">
       <Filter>UVa\10900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11300\11332.cpp">
+      <Filter>UVa\11300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
