--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -446,6 +446,9 @@
     <ClCompile Include="UVa\11300\11332.cpp">
       <Filter>UVa\11300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10302.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
