--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -449,6 +449,9 @@
     <ClCompile Include="UVa\10300\10302.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10420.cpp">
+      <Filter>UVa\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
