--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -452,6 +452,9 @@
     <ClCompile Include="UVa\10400\10420.cpp">
       <Filter>UVa\10400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11500\11530.cpp">
+      <Filter>UVa\11500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
