--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -455,6 +455,9 @@
     <ClCompile Include="UVa\11500\11530.cpp">
       <Filter>UVa\11500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\458.cpp">
+      <Filter>UVa\400\450</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
