--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -461,6 +461,9 @@
     <ClCompile Include="UVa\10300\10340.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11900\11984.cpp">
+      <Filter>UVa\11900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
