--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -473,6 +473,9 @@
     <ClCompile Include="UVa\11400\11417.cpp">
       <Filter>UVa\11400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\147.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
