--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -476,6 +476,12 @@
     <ClCompile Include="UVa\100\147.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12400\12468.cpp">
+      <Filter>UVa\12400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\11300\11340.cpp">
+      <Filter>UVa\11300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
