--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -482,6 +482,9 @@
     <ClCompile Include="UVa\11300\11340.cpp">
       <Filter>UVa\11300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10424.cpp">
+      <Filter>UVa\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
