--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -485,6 +485,9 @@
     <ClCompile Include="UVa\10400\10424.cpp">
       <Filter>UVa\10400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10324.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
