--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -491,6 +491,9 @@
     <ClCompile Include="UVa\10000\10066.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11000\11069.cpp">
+      <Filter>UVa\11000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
