--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -497,6 +497,9 @@
     <ClCompile Include="UVa\13100\13109.cpp">
       <Filter>UVa\13100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\13100\13148.cpp">
+      <Filter>UVa\13100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
