--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -503,6 +503,9 @@
     <ClCompile Include="UVa\13100\13130.cpp">
       <Filter>UVa\13100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\13100\13178.cpp">
+      <Filter>UVa\13100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
