--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -506,6 +506,9 @@
     <ClCompile Include="UVa\13100\13178.cpp">
       <Filter>UVa\13100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\13100\13187.cpp">
+      <Filter>UVa\13100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
