--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -518,6 +518,9 @@
     <ClCompile Include="UVa\13100\13190.cpp">
       <Filter>UVa\13100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\13200\13244.cpp">
+      <Filter>UVa\13200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
