--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -527,6 +527,9 @@
     <ClCompile Include="UVa\12900\12952.cpp">
       <Filter>UVa\12900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12800\12854.cpp">
+      <Filter>UVa\12800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
