--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -548,6 +548,12 @@
     <ClCompile Include="UVa\12500\12503.cpp">
       <Filter>UVa\12500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12300\12372.cpp">
+      <Filter>UVa\12300</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\12200\12250.cpp">
+      <Filter>UVa\12200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
