--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -554,6 +554,12 @@
     <ClCompile Include="UVa\12200\12250.cpp">
       <Filter>UVa\12200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12100\12149.cpp">
+      <Filter>UVa\12100</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\12100 - Copy\12015.cpp">
+      <Filter>UVa\12000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
